--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -49,7 +49,7 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           # deploy to gh-pages branch
-          target_branch: gh-pages
+          target_branch: master
           # deploy the default output dir of VuePress
           build_dir: .vuepress/dist
         env:
