--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@vuepress/plugin-search": "^2.0.0-beta.46",
     "vuepress": "^2.0.0-beta.46"
   }
